@@ -1,95 +1,150 @@
 package ru.hse.software.design;
 
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
+import java.io.ByteArrayOutputStream;
+import java.io.PrintStream;
 import java.util.Arrays;
 import java.util.List;
 
 public class ParserTests {
-    @Test
-    public void testWithoutArguments() {
-        Token command = new Token("command", Type.FULLY_PROCESSED);
-        CommandTokens commandTokens = Parser.preProcess(List.of(command));
-        Assertions.assertEquals("command", commandTokens.getCommand());
-        Assertions.assertEquals(0, commandTokens.getCommandArgs().size());
+    private final ByteArrayOutputStream errContent = new ByteArrayOutputStream();
+    private final PrintStream originalErr = System.err;
+
+    @BeforeEach
+    public void setUp() {
+        System.setErr(new PrintStream(errContent));
+        Environment.clear();
+    }
+
+    @AfterEach
+    public void restoreStreams() {
+        System.setErr(originalErr);
     }
 
     @Test
-    public void testOneArgument() {
+    public void testOneCommandWithoutArguments() {
         Token command = new Token("command", Type.FULLY_PROCESSED);
-        Token arg = new Token("arg", Type.FULLY_PROCESSED);
-        CommandTokens commandTokens = Parser.preProcess(Arrays.asList(command, arg));
-        Assertions.assertEquals("command", commandTokens.getCommand());
-        Assertions.assertEquals(1, commandTokens.getCommandArgs().size());
-        Assertions.assertEquals("arg", commandTokens.getCommandArgs().get(0));
+        List<CommandTokens> commandTokens = Parser.preProcess(List.of(command));
+        Assertions.assertEquals("command", commandTokens.get(0).getCommand());
+        Assertions.assertEquals(0, commandTokens.get(0).getCommandArgs().size());
     }
 
     @Test
-    public void testMoreArguments() {
+    public void testOneCommandWithArguments() {
         Token command = new Token("command", Type.FULLY_PROCESSED);
         Token arg1 = new Token("arg1", Type.FULLY_PROCESSED);
         Token arg2 = new Token("arg2", Type.FULLY_PROCESSED);
         Token arg3 = new Token("arg3", Type.FULLY_PROCESSED);
-        CommandTokens commandTokens = Parser.preProcess(Arrays.asList(command, arg1, arg2, arg3));
-        Assertions.assertEquals("command", commandTokens.getCommand());
-        Assertions.assertEquals(3, commandTokens.getCommandArgs().size());
-        Assertions.assertEquals("arg1", commandTokens.getCommandArgs().get(0));
-        Assertions.assertEquals("arg2", commandTokens.getCommandArgs().get(1));
-        Assertions.assertEquals("arg3", commandTokens.getCommandArgs().get(2));
+        List<CommandTokens> commandTokens = Parser.preProcess(Arrays.asList(command, arg1, arg2, arg3));
+        Assertions.assertEquals("command", commandTokens.get(0).getCommand());
+        Assertions.assertEquals(3, commandTokens.get(0).getCommandArgs().size());
+        Assertions.assertEquals("arg1", commandTokens.get(0).getCommandArgs().get(0));
+        Assertions.assertEquals("arg2", commandTokens.get(0).getCommandArgs().get(1));
+        Assertions.assertEquals("arg3", commandTokens.get(0).getCommandArgs().get(2));
     }
 
     @Test
-    public void testEqualitySimple() {
+    public void testEqualityOneCommand() {
         Token command = new Token("x=123", Type.FULLY_PROCESSED);
-        CommandTokens commandTokens = Parser.preProcess(List.of(command));
-        Assertions.assertEquals("environment", commandTokens.getCommand());
-        Assertions.assertEquals(2, commandTokens.getCommandArgs().size());
-        Assertions.assertEquals("x", commandTokens.getCommandArgs().get(0));
-        Assertions.assertEquals("123", commandTokens.getCommandArgs().get(1));
+        List<CommandTokens> commandTokens = Parser.preProcess(List.of(command));
+        Assertions.assertEquals("environment", commandTokens.get(0).getCommand());
+        Assertions.assertEquals(2, commandTokens.get(0).getCommandArgs().size());
+        Assertions.assertEquals("x", commandTokens.get(0).getCommandArgs().get(0));
+        Assertions.assertEquals("123", commandTokens.get(0).getCommandArgs().get(1));
     }
 
     @Test
-    public void testEqualityWithoutVariable() {
-        Token command = new Token("=123", Type.FULLY_PROCESSED);
-        CommandTokens commandTokens = Parser.preProcess(List.of(command));
-        Assertions.assertEquals("=123", commandTokens.getCommand());
-        Assertions.assertEquals(0, commandTokens.getCommandArgs().size());
+    public void testThreeCommands() {
+        Token command1 = new Token("command1", Type.FULLY_PROCESSED);
+        Token pipe = new Token("|", Type.FULLY_PROCESSED);
+        Token command2 = new Token("command2", Type.FULLY_PROCESSED);
+        Token arg1 = new Token("arg1", Type.FULLY_PROCESSED);
+        Token arg2 = new Token("arg2", Type.FULLY_PROCESSED);
+        Token command3 = new Token("command3", Type.FULLY_PROCESSED);
+        Token arg3 = new Token("arg3", Type.FULLY_PROCESSED);
+        List<CommandTokens> commandTokens = Parser.preProcess(Arrays.asList(command1, pipe,
+                                                                            command2, arg1, arg2, pipe,
+                                                                            command3, arg3));
+        Assertions.assertEquals(3, commandTokens.size());
+        Assertions.assertEquals("command1", commandTokens.get(0).getCommand());
+        Assertions.assertEquals(0, commandTokens.get(0).getCommandArgs().size());
+        Assertions.assertEquals("command2", commandTokens.get(1).getCommand());
+        Assertions.assertEquals(2, commandTokens.get(1).getCommandArgs().size());
+        Assertions.assertEquals("arg1", commandTokens.get(1).getCommandArgs().get(0));
+        Assertions.assertEquals("arg2", commandTokens.get(1).getCommandArgs().get(1));
+        Assertions.assertEquals("command3", commandTokens.get(2).getCommand());
+        Assertions.assertEquals("arg3", commandTokens.get(2).getCommandArgs().get(0));
     }
 
     @Test
-    public void testEqualityInQuotes1() {
-        Token command = new Token("x'=123'", Type.FULLY_PROCESSED);
-        CommandTokens commandTokens = Parser.preProcess(List.of(command));
-        Assertions.assertEquals("x'=123'", commandTokens.getCommand());
-        Assertions.assertEquals(0, commandTokens.getCommandArgs().size());
+    public void testTwoPipesTogether() {
+        Token command1 = new Token("command1", Type.FULLY_PROCESSED);
+        Token pipe = new Token("|", Type.FULLY_PROCESSED);
+        Token command2 = new Token("command2", Type.FULLY_PROCESSED);
+        List<CommandTokens> commandTokens = Parser.preProcess(Arrays.asList(command1, pipe, pipe, command2));
+        Assertions.assertEquals(0, commandTokens.size());
+        String expectedError = "'|' must be between commands\n";
+        Assertions.assertEquals(expectedError, errContent.toString());
     }
 
     @Test
-    public void testEqualityInQuotes2() {
-        Token command = new Token("x'yz\"=123\"'", Type.FULLY_PROCESSED);
-        CommandTokens commandTokens = Parser.preProcess(List.of(command));
-        Assertions.assertEquals("x'yz\"=123\"'", commandTokens.getCommand());
-        Assertions.assertEquals(0, commandTokens.getCommandArgs().size());
+    public void testPipeInTheBegin() {
+        Token command1 = new Token("command1", Type.FULLY_PROCESSED);
+        Token pipe = new Token("|", Type.FULLY_PROCESSED);
+        Token command2 = new Token("command2", Type.FULLY_PROCESSED);
+        List<CommandTokens> commandTokens = Parser.preProcess(Arrays.asList(pipe, command1, pipe, command2));
+        Assertions.assertEquals(0, commandTokens.size());
+        String expectedError = "'|' must be between commands\n";
+        Assertions.assertEquals(expectedError, errContent.toString());
     }
 
     @Test
-    public void testDoubleEquality1() {
-        Token command = new Token("\"x=123\"=test", Type.FULLY_PROCESSED);
-        CommandTokens commandTokens = Parser.preProcess(List.of(command));
-        Assertions.assertEquals("environment", commandTokens.getCommand());
-        Assertions.assertEquals(2, commandTokens.getCommandArgs().size());
-        Assertions.assertEquals("\"x=123\"", commandTokens.getCommandArgs().get(0));
-        Assertions.assertEquals("test", commandTokens.getCommandArgs().get(1));
+    public void testPipeInTheEnd() {
+        Token command1 = new Token("command1", Type.FULLY_PROCESSED);
+        Token pipe = new Token("|", Type.FULLY_PROCESSED);
+        List<CommandTokens> commandTokens = Parser.preProcess(Arrays.asList(command1, pipe));
+        Assertions.assertEquals(0, commandTokens.size());
+        String expectedError = "'|' must be between commands\n";
+        Assertions.assertEquals(expectedError, errContent.toString());
     }
 
     @Test
-    public void testDoubleEquality2() {
-        Token command = new Token("x=\"a=2\"", Type.FULLY_PROCESSED);
-        CommandTokens commandTokens = Parser.preProcess(List.of(command));
-        Assertions.assertEquals("environment", commandTokens.getCommand());
-        Assertions.assertEquals(2, commandTokens.getCommandArgs().size());
-        Assertions.assertEquals("x", commandTokens.getCommandArgs().get(0));
-        Assertions.assertEquals("\"a=2\"", commandTokens.getCommandArgs().get(1));
+    public void testEqualityAfterPipe() {
+        Token command1 = new Token("command1", Type.FULLY_PROCESSED);
+        Token pipe = new Token("|", Type.FULLY_PROCESSED);
+        Token equality = new Token("x=123", Type.FULLY_PROCESSED);
+        List<CommandTokens> commandTokens = Parser.preProcess(Arrays.asList(command1, pipe, equality));
+        Assertions.assertEquals("environment", commandTokens.get(1).getCommand());
+        Assertions.assertEquals(2, commandTokens.get(1).getCommandArgs().size());
+        Assertions.assertEquals("x", commandTokens.get(1).getCommandArgs().get(0));
+        Assertions.assertEquals("123", commandTokens.get(1).getCommandArgs().get(1));
+    }
+
+    @Test
+    public void testEqualityWithArgumentsAfterPipe() {
+        Token command1 = new Token("command1", Type.FULLY_PROCESSED);
+        Token pipe = new Token("|", Type.FULLY_PROCESSED);
+        Token equality = new Token("x=123", Type.FULLY_PROCESSED);
+        Token arg = new Token("arg", Type.FULLY_PROCESSED);
+        List<CommandTokens> commandTokens = Parser.preProcess(Arrays.asList(command1, pipe, equality, arg));
+        Assertions.assertEquals("environment", commandTokens.get(1).getCommand());
+        Assertions.assertEquals(3, commandTokens.get(1).getCommandArgs().size());
+        Assertions.assertEquals("x", commandTokens.get(1).getCommandArgs().get(0));
+        Assertions.assertEquals("123", commandTokens.get(1).getCommandArgs().get(1));
+        Assertions.assertEquals("arg", commandTokens.get(1).getCommandArgs().get(2));
+    }
+
+    @Test
+    public void testEqualityWithoutVariableAfterPipe() {
+        Token command1 = new Token("command1", Type.FULLY_PROCESSED);
+        Token pipe = new Token("|", Type.FULLY_PROCESSED);
+        Token equality = new Token("=123", Type.FULLY_PROCESSED);
+        List<CommandTokens> commandTokens = Parser.preProcess(Arrays.asList(command1, pipe, equality));
+        Assertions.assertEquals("=123", commandTokens.get(1).getCommand());
+        Assertions.assertEquals(0, commandTokens.get(1).getCommandArgs().size());
     }
 }
